src/test/ui/invalid-self-argument/bare-fn.stderr
error: unexpected `self` parameter in function
  --> $DIR/bare-fn.rs:1:16
   |
LL | fn b(foo: u32, &mut self) { }
   |                ^^^^^^^^^ not valid as function parameter
   |
   = note: `self` is only valid as the first parameter of an associated function

error: aborting due to previous error

